further flags for testing/profiling